ASSERT(cookieStorageAdapter) when calling stopObservingCookieChanges after WebProcess has crashed https://bugs.webkit.org/show_bug.cgi?id=57477 <rdar://problem/9178751>

Reviewed by Anders Carlsson.

If someone has called startObservingCookieChanges, and the WebProcess crashes and restarts, the UIProcess
will call stopObservingCookieChanges when cookieStorageAdapter is nil.

The assert is wrong when the web process crashes, and there is no harm in dispatching a message to nil,
so remove the assert.

* platform/network/mac/CookieStorageMac.mm:
(WebCore::stopObservingCookieChanges):



Canonical link: https://commits.webkit.org/72271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82473 268f45cc-cd09-0410-ab3c-d52691b4dbfc